--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m1
     integrations:
-      app_store_connect: NNNNNNN  # Укажите название вашей интеграции App Store Connect в CodeMagic
+      app_store_connect: ChaiCircuit API
     environment:
       ios_signing:
         distribution_type: app_store
